--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@grpc/grpc-js": "^1.10.6",
     "express": "^4.19.2",
     "grpc": "^1.24.11",
     "pg": "^8.11.5",
     "redis": "^4.6.13"
-  },
-  "devDependencies": {}
+  }
 }
