Squashed commit of the following:
commit 1edbc86482ac5daaf0bcdb2ebba343bcf65d5da2
Author: N0m4d <ignacio.marambio_z@mail.udp.cl>
Date:   Mon Apr 22 08:56:21 2024 -0400

    Eso tilin

    Contraseña menos ofensiva para los mas sensibles.
    (Porque 'citando a Omar' eso tilin')

commit 3a7578e75f98e931b33ed664cb25af817ebc0eae
Author: N0m4d <ignacio.marambio_z@mail.udp.cl>
Date:   Mon Apr 22 08:51:31 2024 -0400

    creando client nuevamente

commit af2ae4270b0611c0ebb2a6a5e75ddf12318cb9d6
Author: N0m4d <ignacio.marambio_z@mail.udp.cl>
Date:   Mon Apr 22 08:35:19 2024 -0400

    Descrbrí lo que tira mi servidor!

commit a69fb937fe265ce49734950c651f70da0f7b4b9a
Author: N0m4d <ignacio.marambio_z@mail.udp.cl>
Date:   Mon Apr 22 08:23:23 2024 -0400

    Co-authored-by: Omar Marca <xeromark@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,35 +6,26 @@ services:
     container_name: cliente
     ports:
       - "3000:3000"
-      - "9229:9229"
     networks:
       backend:
         ipv4_address: 172.0.0.2
     volumes:
       - ./client:/app
-    command: tail -f /dev/null && apt-get update && apt-get -y upgrade && npm install && npm -y init
+    working_dir: /app
+    command: bash -c "apt update && apt upgrade -y && npm init && npm update && npm i @grpc/grpc-js nodemon pg express && tail -f /dev/null"
+    tty: true
+    stdin_open: true
 
 # Cache grande = cachos
   cachos:
     image: bitnami/redis:latest
+    restart: always
     container_name: cachitos
     ports:
       - "6379:6379"
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
-    command:
-      - redis-server
-      - --maxmemory 100mb
-      - --maxmemory-policy allkeys-lru
-      - --appendonly yes
-      - --appendfilename appendonly.aof
-      - --appendfsync everysec
-      - --save 900 1
-      - --save 300 10
-      - --save 60 10000
-      - --dbfilename dump.rdb
-      - --dir /bitnami/redis/data
-      - --requirepass "supercachos"
+    command: /opt/bitnami/scripts/redis/run.sh --maxmemory 5mb --maxmemory-policy allkeys-lfu
     networks:
       backend:
         ipv4_address: 172.0.0.4
