--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@grpc/grpc-js": "^1.10.6",
     "express": "^4.19.2",
     "grpc": "^1.24.11",
+    "grpc-tools": "^1.12.4",
     "pg": "^8.11.5",
     "redis": "^4.6.13"
   }
