--- a/client/package.json
+++ b/client/package.json
@@ -18,5 +18,8 @@
     "grpc-tools": "^1.12.4",
     "pg": "^8.11.5",
     "redis": "^4.6.13"
+  },
+  "devDependencies": {
+    "grpc_tools_node_protoc_ts": "^5.3.3"
   }
 }
